--- a/templates/layout.html
+++ b/templates/layout.html
@@ -66,11 +66,11 @@
                 <a class="item-select active" href="javascript:void(0);" onclick="stop();">STOP</a>
                 <span>HOME:</span>
                 <a class="item-select active" href="javascript:void(0);" onclick="home();">ALL</a>
-                <a class="item-select active" href="javascript:void(0);" onclick="home('x');">ALL</a>
-                <a class="item-select active" href="javascript:void(0);" onclick="home('y');">ALL</a>
-                <a class="item-select active" href="javascript:void(0);" onclick="home('z');">ALL</a>
-                <a class="item-select active" href="javascript:void(0);" onclick="home('a');">ALL</a>
-                <a class="item-select active" href="javascript:void(0);" onclick="home('b');">ALL</a>
+                <a class="item-select active" href="javascript:void(0);" onclick="home('x');">X</a>
+                <a class="item-select active" href="javascript:void(0);" onclick="home('y');">Y</a>
+                <a class="item-select active" href="javascript:void(0);" onclick="home('z');">Z</a>
+                <a class="item-select active" href="javascript:void(0);" onclick="home('a');">A</a>
+                <a class="item-select active" href="javascript:void(0);" onclick="home('b');">B</a>
             </section>
             <section id="jog_xyz">
                 <fieldset>
@@ -103,13 +103,29 @@
                         <span>Z:<span id="position_z"></span></span>
                     </div>
                 </fieldset>
+                <fieldset>
+                    <legend>Select Increment (mm)</legend>
+                    <div>
+                        <a class="" href="javascript:void(0);" onclick="changeStepSize(this,'xyz',100);">100</a>
+                        <a class="" href="javascript:void(0);" onclick="changeStepSize(this,'xyz',50);">50</a>
+                        <a class="" href="javascript:void(0);" onclick="changeStepSize(this,'xyz',20);">20</a>
+                        <a class="" href="javascript:void(0);" onclick="changeStepSize(this,'xyz',10);">10</a>
+                        <a class="" href="javascript:void(0);" onclick="changeStepSize(this,'xyz',5);">5</a>
+                        <a class="" href="javascript:void(0);" onclick="changeStepSize(this,'xyz',2);">2</a>
+                        <a class="" href="javascript:void(0);" onclick="changeStepSize(this,'xyz',1);">1</a>
+                        <a class="" href="javascript:void(0);" onclick="changeStepSize(this,'xyz',0.5);">0.5</a>
+                        <a class="" href="javascript:void(0);" onclick="changeStepSize(this,'xyz',91);">91</a>
+                        <a class="" href="javascript:void(0);" onclick="changeStepSize(this,'xyz',135);">135</a>
+                    </div>
+                </fieldset>
             </section>
         </section>
         <section id="main">
             <!-- main window tabs go here, programmatically loaded -->
             <ul id="main-nav-tabs" class="nav nav-tabs">
-
             </ul>
+
+            {% block content %}{% endblock %}
         </section>
 	</body>
 </html>
