--- a/templates/body.html
+++ b/templates/body.html
@@ -7,7 +7,8 @@
 </div>
 {% for tt in templates_names %}
 {% include tt %}
-{{tt}}
+<p>Something was found here...</p>
+{{ tt }}
 {% endfor %}
 <div id='test-div-2'>
 <h1>FINISH</h1>
