--- a/templates/body.html
+++ b/templates/body.html
@@ -5,6 +5,7 @@
 <div id='test-div-1'>
 <h1>START</h1>
 </div>
+{{ templates_names }}
 {% for tt in templates_names %}
 {% include tt %}
 <p>Something was found here...</p>
