--- a/templates/body.html
+++ b/templates/body.html
@@ -11,7 +11,7 @@
 <p>Something was found here...</p>
 {{ tt }}
 {% endfor %}
-{% include '../templates/modules/containers_library/html/test.http'}
+{% include '../templates/modules/containers_library/html/test.html' %}
 <div id='test-div-2'>
 <h1>FINISH</h1>
 </div>
