--- a/templates/body.html
+++ b/templates/body.html
@@ -10,8 +10,7 @@
 {# % include tt % #}
 <p>Something was found here...</p>
 {% endfor %}
-{% list_templates() %}
-{# % include '../templates/modules/containers_library/html/test.html' % #}
+{% include 'modules/containers_library/html/test.html' %}
 <div id='test-div-2'>
 <h1>FINISH</h1>
 </div>
