--- a/templates/body.html
+++ b/templates/body.html
@@ -7,10 +7,10 @@
 </div>
 {{ templates_names }}
 {% for tt in templates_names %}
-{# % include tt % #}
+{% include tt %}
 <p>Something was found here...</p>
 {% endfor %}
-{% include 'modules/containers_library/html/test.html' %}
+{# % include 'modules/containers_library/html/test.html' % #}
 <div id='test-div-2'>
 <h1>FINISH</h1>
 </div>
