--- a/templates/body.html
+++ b/templates/body.html
@@ -5,8 +5,8 @@
 <div id='test-div-1'>
 <h1>START</h1>
 </div>
-{{ templates_names }}
-{% for tt in templates_names %}
+{{ tabs_templates }}
+{% for tt in tabs_templates %}
 {% include tt %}
 <p>Something was found here...</p>
 {% endfor %}
