--- a/templates/layout.html
+++ b/templates/layout.html
@@ -12,6 +12,7 @@
     
         <script type="text/javascript" src="/static/js/communication.js"></script>
         <script type="text/javascript" src="/static/js/main.js"></script>
+        <script type="text/javascript" src="/static/js/socketHandler.js"></script>
     </head>
 
 	<body>
